# ski-season-planner

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  TODO.md  corrected_stations.json  observations.md  pyproject.toml
agent/: llm_planner.py
data/: magic_pass_stations.json  ski_planner.db
docs/: database_design.md
ski_planner_app/: app.py  config.py
ski_planner_app/models/: station.py  streaming.py  trip.py
ski_planner_app/services/: agent_service.py  database_service.py  distance_service.py  improved_prompt.py  planner_service.py  prompt.py  singleton.py  station_service.py  streaming_service.py
ski_planner_app/services/data/: magic_pass_stations.json
ski_planner_app/services/tools/: openrouteservice_tool.py
ski_planner_app/ui/: components.py  main.py  state.py  streaming_components.py
src/: app.py  config.py
src/models/: station.py  trip.py
src/services/: agent_service.py  openrouteservice_tool.py  planner_service.py  prompt.py  singleton.py  station_service.py
src/services/tools/: openrouteservice_tool.py
src/ui/: components.py  state.py
