[project]
name = "ski-season-planner"
version = "0.1.0"
description = "A Streamlit application for planning ski seasons."
authors = [
    {name = "Michele Ricciardi", email = "info@michelericciardi.co.uk"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "streamlit",
    "pandas",
    "strands-agents[openai] (>=0.1.5,<0.2.0)",
    "strands-agents-tools (>=0.1.4,<0.2.0)",
    "ollama (>=0.4.8,<0.5.0)",
]

packages = [
    { include = "agent" },
    { include = "src" },
] 

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"